# gtfsschedule

./: .hlint.yaml  .travis.yml  ChangeLog.adoc  ChangeLog.md  LICENSE  Makefile  README.adoc  README.md  buildout.cfg  default.nix  gtfsbrisbane.cabal  gtfsschedule.cabal  gtfsschedule.spec  setup.py  stack-lts-22.yaml  stack.yaml
.github/workflows/: haskell-ci.yml  nix-ci.yml
.nix/: gtfsschedule.nix  hprotoc.nix  nixpkgs.nix  protocol-buffers.nix
app/: Config.hs  Main.hs
benchmarks/: Main.hs
data/: Makefile  fixUpTimes.sh  importCSVToSqlite.sql
docs/: CHANGES.txt
gtfsbrisbane/: __init__.py  command.py  config.py  data_provider.py  entry.py  queue.py
gtfsbrisbane/tests/: test_data_provider.py  test_entry.py  test_queue.py
gtfsbrisbane/tests/testdata/: centralave.html  romast.html
man/: gtfsschedule.1.adoc
src/: Database.hs  Lib.hs  Message.hs  Schedule.hs  Update.hs
src/CLI/: Config.hs  Main.hs
src/CSV/: Calendar.hs  Import.hs  Route.hs  Stop.hs  StopTime.hs  Trip.hs  Util.hs
src/CSV/Import/: Calendar.hs  Route.hs  Stop.hs  StopTime.hs  Trip.hs  Util.hs
src/Com/Google/Transit/: Realtime.hs
src/Com/Google/Transit/Realtime/: Alert.hs  EntitySelector.hs  FeedEntity.hs  FeedHeader.hs  FeedMessage.hs  Position.hs  TimeRange.hs  TranslatedString.hs  TripDescriptor.hs  TripUpdate.hs  VehicleDescriptor.hs  VehiclePosition.hs
src/Com/Google/Transit/Realtime/Alert/: Cause.hs  Effect.hs
src/Com/Google/Transit/Realtime/FeedHeader/: Incrementality.hs
src/Com/Google/Transit/Realtime/TranslatedString/: Translation.hs
src/Com/Google/Transit/Realtime/TripDescriptor/: ScheduleRelationship.hs
src/Com/Google/Transit/Realtime/TripUpdate/: StopTimeEvent.hs  StopTimeUpdate.hs
src/Com/Google/Transit/Realtime/TripUpdate/StopTimeUpdate/: ScheduleRelationship.hs
src/Com/Google/Transit/Realtime/VehiclePosition/: CongestionLevel.hs  OccupancyStatus.hs  VehicleStopStatus.hs
src/GTFS/: Database.hs  Schedule.hs
src/GTFS/Realtime/: Message.hs  Update.hs
src/GTFS/Realtime/Internal/Com/Google/Transit/: Realtime.hs
src/GTFS/Realtime/Internal/Com/Google/Transit/Realtime/: Alert.hs  EntitySelector.hs  FeedEntity.hs  FeedHeader.hs  FeedMessage.hs  Position.hs  TimeRange.hs  TranslatedString.hs  TripDescriptor.hs  TripUpdate.hs  VehicleDescriptor.hs  VehiclePosition.hs
src/GTFS/Realtime/Internal/Com/Google/Transit/Realtime/Alert/: Cause.hs  Effect.hs
src/GTFS/Realtime/Internal/Com/Google/Transit/Realtime/FeedHeader/: Incrementality.hs
src/GTFS/Realtime/Internal/Com/Google/Transit/Realtime/TranslatedString/: Translation.hs
src/GTFS/Realtime/Internal/Com/Google/Transit/Realtime/TripDescriptor/: ScheduleRelationship.hs
src/GTFS/Realtime/Internal/Com/Google/Transit/Realtime/TripUpdate/: StopTimeEvent.hs  StopTimeUpdate.hs
src/GTFS/Realtime/Internal/Com/Google/Transit/Realtime/TripUpdate/StopTimeUpdate/: ScheduleRelationship.hs
src/GTFS/Realtime/Internal/Com/Google/Transit/Realtime/VehiclePosition/: CongestionLevel.hs  OccupancyStatus.hs  VehicleStopStatus.hs
src/GTFS/Realtime/Message/: Internal.hs  Schedule.hs  Types.hs
test/: CSVImport.hs  Fixtures.hs  Main.hs  Realtime.hs  Spec.hs  TestCSVImport.hs  TestProperty.hs  TestRealtime.hs  TestSchedule.hs  TestUpdate.hs
test/data/: SEQ  invalid_stop_times.txt  valid_stop_times.txt
test/data/aftermidnight/: calendar.txt  routes.txt  stop_times.txt  stops.txt  trips.txt
test/data/importtest/: calendar.txt  stop_times.txt
test/data/regular/: calendar.txt  stop_times.txt  stops.txt  trips.txt
test/data/servicefinalstop/: calendar.txt  routes.txt  stop_times.txt  trips.txt
test/data/tempservice/: calendar.txt  routes.txt  stop_times.txt
tools/: showFeed.hs
