name:                gtfsschedule
version:             0.3.1.0
synopsis:            Be on time for your next public transport service
description:         Please see README.md
homepage:            http://github.com/romanofski/gtfsschedule#readme
license:             GPL-3
license-file:        LICENSE
author:              Róman Joost
maintainer:          roman@bromeco.de
copyright:           2015 Róman Joost
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2
  exposed-modules:     Message
                     , Schedule
                     , Database
                     , Update
                     , CSV.Import
  other-modules:       Com.Google.Transit.Realtime.Alert
                     , Com.Google.Transit.Realtime.Alert.Cause
                     , Com.Google.Transit.Realtime.Alert.Effect
                     , Com.Google.Transit.Realtime.EntitySelector
                     , Com.Google.Transit.Realtime.FeedEntity
                     , Com.Google.Transit.Realtime.FeedHeader
                     , Com.Google.Transit.Realtime.FeedHeader.Incrementality
                     , Com.Google.Transit.Realtime.FeedMessage
                     , Com.Google.Transit.Realtime.Position
                     , Com.Google.Transit.Realtime.TimeRange
                     , Com.Google.Transit.Realtime.TranslatedString
                     , Com.Google.Transit.Realtime.TranslatedString.Translation
                     , Com.Google.Transit.Realtime.TripUpdate
                     , Com.Google.Transit.Realtime.TripUpdate.StopTimeEvent
                     , Com.Google.Transit.Realtime.TripUpdate.StopTimeUpdate.ScheduleRelationship
                     , Com.Google.Transit.Realtime.TripUpdate.StopTimeUpdate
                     , Com.Google.Transit.Realtime.TripDescriptor
                     , Com.Google.Transit.Realtime.TripDescriptor.ScheduleRelationship
                     , Com.Google.Transit.Realtime.VehicleDescriptor
                     , Com.Google.Transit.Realtime.VehiclePosition
                     , Com.Google.Transit.Realtime.VehiclePosition.VehicleStopStatus
                     , Com.Google.Transit.Realtime.VehiclePosition.CongestionLevel
                     , Com.Google.Transit.Realtime.VehiclePosition.OccupancyStatus
                     , CSV.Import.Route
                     , CSV.Import.Trip
                     , CSV.Import.Calendar
                     , CSV.Import.Stop
                     , CSV.Import.StopTime
                     , CSV.Import.Util
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , protocol-buffers
                     , time
                     , old-locale >= 1.0
                     , text
                     , utf8-string
                     , transformers
                     , resourcet
                     , monad-logger
                     , persistent
                     , containers
                     , mtl
                     , persistent-sqlite <= 2.2
                     , persistent-template <= 2.1.3.6
                     , esqueleto
                     , xdg-basedir
                     , http-conduit <= 2.1.5
                     , conduit
                     , conduit-extra >= 1.1
                     , http-types
                     , cassava >= 0.4.5.0
                     , zip-archive
                     , temporary
                     , directory >= 1.2
  default-language:    Haskell2010

executable gtfsschedule
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2
  build-depends:       base
                     , gtfsschedule
                     , protocol-buffers
                     , bytestring
                     , optparse-applicative
                     , http-conduit
                     , text
  default-language:    Haskell2010

test-suite unit-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  -- ghc-options:         -fprof-auto -fprof-cafs
  build-depends:       base
                     , gtfsschedule
                     , tasty-hunit
                     , tasty
                     , bytestring
                     , time
                     , persistent
                     , persistent-sqlite
                     , text
                     , transformers
                     , resourcet
                     , monad-logger
                     , protocol-buffers
                     , temporary
                     , directory
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/romanofski/gtfsschedule
