name:                gtfsschedule
version:             0.7.0.0
synopsis:            Be on time for your next public transport service
description:         Please see README.md
homepage:            http://github.com/romanofski/gtfsschedule#readme
license:             GPL-3
license-file:        LICENSE
author:              Róman Joost
maintainer:          roman@bromeco.de
copyright:           2015 Róman Joost
category:            Web
build-type:          Simple
extra-source-files:  README.adoc
                     ChangeLog.adoc
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     GTFS.Schedule
                     , GTFS.Database
                     , CSV.Import
                     , CLI.Config
                     , CLI.Main
                     , GTFS.Realtime.Message.Types
                     , GTFS.Realtime.Message.Schedule
                     , GTFS.Realtime.Update
                     , GTFS.Realtime.Internal.Com.Google.Transit.Realtime.Alert
                     , GTFS.Realtime.Internal.Com.Google.Transit.Realtime.Alert.Cause
                     , GTFS.Realtime.Internal.Com.Google.Transit.Realtime.Alert.Effect
                     , GTFS.Realtime.Internal.Com.Google.Transit.Realtime.EntitySelector
                     , GTFS.Realtime.Internal.Com.Google.Transit.Realtime.FeedEntity
                     , GTFS.Realtime.Internal.Com.Google.Transit.Realtime.FeedHeader
                     , GTFS.Realtime.Internal.Com.Google.Transit.Realtime.FeedHeader.Incrementality
                     , GTFS.Realtime.Internal.Com.Google.Transit.Realtime.FeedMessage
                     , GTFS.Realtime.Internal.Com.Google.Transit.Realtime.Position
                     , GTFS.Realtime.Internal.Com.Google.Transit.Realtime.TimeRange
                     , GTFS.Realtime.Internal.Com.Google.Transit.Realtime.TranslatedString
                     , GTFS.Realtime.Internal.Com.Google.Transit.Realtime.TranslatedString.Translation
                     , GTFS.Realtime.Internal.Com.Google.Transit.Realtime.TripUpdate
                     , GTFS.Realtime.Internal.Com.Google.Transit.Realtime.TripUpdate.StopTimeEvent
                     , GTFS.Realtime.Internal.Com.Google.Transit.Realtime.TripUpdate.StopTimeUpdate.ScheduleRelationship
                     , GTFS.Realtime.Internal.Com.Google.Transit.Realtime.TripUpdate.StopTimeUpdate
                     , GTFS.Realtime.Internal.Com.Google.Transit.Realtime.TripDescriptor
                     , GTFS.Realtime.Internal.Com.Google.Transit.Realtime.TripDescriptor.ScheduleRelationship
                     , GTFS.Realtime.Internal.Com.Google.Transit.Realtime.VehicleDescriptor
                     , GTFS.Realtime.Internal.Com.Google.Transit.Realtime.VehiclePosition
                     , GTFS.Realtime.Internal.Com.Google.Transit.Realtime.VehiclePosition.VehicleStopStatus
                     , GTFS.Realtime.Internal.Com.Google.Transit.Realtime.VehiclePosition.CongestionLevel
                     , GTFS.Realtime.Internal.Com.Google.Transit.Realtime.VehiclePosition.OccupancyStatus
                     , CSV.Import.Route
                     , CSV.Import.Trip
                     , CSV.Import.Calendar
                     , CSV.Import.Stop
                     , CSV.Import.StopTime
                     , CSV.Import.Util
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , protocol-buffers
                     , time
                     , old-locale >= 1.0
                     , text
                     , utf8-string
                     , transformers
                     , resourcet
                     , monad-logger
                     , persistent
                     , containers
                     , mtl
                     , persistent-sqlite <= 2.2
                     , persistent-template <= 2.1.5
                     , esqueleto
                     , xdg-basedir
                     , http-conduit <= 2.1.8
                     , conduit
                     , conduit-extra >= 1.1
                     , http-types
                     , cassava >= 0.4.5.0
                     , zip-archive
                     , temporary
                     , directory >= 1.2
                     , system-filepath
                     , ini
                     , optparse-applicative
                     , HStringTemplate
  if impl(ghc < 7.10)
    build-depends:
      bifunctors >= 4.0
  default-language:    Haskell2010

executable gtfsschedule
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base
                     , mtl
                     , gtfsschedule
                     , protocol-buffers
                     , bytestring
                     , optparse-applicative
                     , http-conduit
                     , text
                     , ini

test-suite unit-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  ghc-options:         -Wall
  main-is:             Spec.hs
  other-modules:       CSVImport
                       Realtime
                       Fixtures
                       TestUpdate
  build-depends:       base
                     , gtfsschedule
                     , tasty-hunit
                     , tasty-quickcheck >= 0.8
                     , QuickCheck
                     , tasty
                     , bytestring
                     , time
                     , persistent
                     , persistent-sqlite
                     , text
                     , transformers
                     , transformers-base
                     , lifted-base
                     , network
                     , conduit
                     , conduit-extra >= 1.1
                     , streaming-commons >= 0.1
                     , resourcet
                     , monad-logger
                     , protocol-buffers
                     , temporary
                     , directory
                     , silently
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/romanofski/gtfsschedule
